[gd_scene load_steps=4 format=3 uid="uid://dkhe650u5e5kg"]

[ext_resource type="Script" path="res://src/test_stuff/debug_combat.gd" id="1_oqmsd"]
[ext_resource type="PackedScene" uid="uid://cgfp336424mu7" path="res://src/test_stuff/DebugAmalgamView.tscn" id="2_niat5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ikivt"]

[node name="DebugCombat" type="Control" node_paths=PackedStringArray("player_view", "enemy_view", "confirm_count", "confirm_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oqmsd")
player_view = NodePath("HBoxContainer/Player")
enemy_view = NodePath("HBoxContainer/Enemy")
confirm_count = NodePath("HBoxContainer/Buttons/ConfirmButton/Count")
confirm_button = NodePath("HBoxContainer/Buttons/ConfirmButton/Confirm")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="HBoxContainer" instance=ExtResource("2_niat5")]
layout_mode = 2

[node name="Enemy" parent="HBoxContainer" instance=ExtResource("2_niat5")]
layout_mode = 2

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ResetAmalgams" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "Reset Amalgams"

[node name="DrawPlayerAbilities" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "Draw Player Abilities"

[node name="EndTurn" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "End Turn"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Buttons"]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_ikivt")

[node name="ConfirmButton" type="HBoxContainer" parent="HBoxContainer/Buttons"]
layout_mode = 2

[node name="Count" type="Label" parent="HBoxContainer/Buttons/ConfirmButton"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Confirm" type="Button" parent="HBoxContainer/Buttons/ConfirmButton"]
layout_mode = 2
disabled = true
text = "Confirm"

[connection signal="ability_selected" from="HBoxContainer/Player" to="." method="_on_player_ability_selected"]
[connection signal="pressed" from="HBoxContainer/Buttons/ResetAmalgams" to="." method="reset_amalgams"]
[connection signal="pressed" from="HBoxContainer/Buttons/DrawPlayerAbilities" to="." method="draw_player_abilities"]
